--- a/app/templates/condominos/lista.html
+++ b/app/templates/condominos/lista.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
 
+<nav aria-label="breadcrumb" class="mb-3">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{{ url_for('main.dashboard') }}">Inicio</a></li>
+        <li class="breadcrumb-item active"  aria-current="page">Condóminos</li>
+    </ol>
+</nav>
+
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h2 class="text-secondary"><i class="fa-solid fa-users-gear"></i> Gestión de Condóminos</h2>
     
@@ -47,20 +54,31 @@
                         </div>
 
                         <div class="row mb-3">
-                            <div class="col-6 border-end">
+                            <div class="col-4 border-end">
                                 <small class="text-muted d-block">Expensa Fija</small>
                                 <span class="fw-bold fs-5 text-success">${{ "%.2f"|format(d.valor_expensa) }}</span>
                             </div>
-                            <div class="col-6">
+                            <div class="col-8">
                                 <small class="text-muted d-block">Paga</small>
                                 <span class="fw-bold text-uppercase">{{ d.responsable_pago }}</span>
+                            </div>
+                        </div>
+
+                        <div class="row mb-3">
+                            <div class="col-4 border-end">
+                                <small class="text-muted d-block">Teléfono</small>
+                                <span class="text-muted d-block">{{ propietario.telefono }}</span>
+                            </div>
+                            <div class="col-8">
+                                <small class="text-muted d-block">Correo</small>
+                                <span class="text-muted d-block">{{ propietario.email }}</span>
                             </div>
                         </div>
                         
                         <div class="d-flex flex-wrap gap-2 justify-content-between align-items-center bg-light p-2 rounded">
                             <div class="btn-group">
                                 <a href="{{ url_for('condominos.estado_cuenta', id=d.id) }}" class="btn btn-outline-dark btn-sm shadow-sm" title="Ver historial">
-                                    <i class="fa-solid fa-list-check"></i> Historial
+                                    <i class="fa-solid fa-list-check"></i> Cuentas
                                 </a>
                                 
                                 {# MODIFICACIÓN: Buscamos el último cargo pendiente para descargar el aviso #}
