--- a/app/templates/mantenimiento/inventario.html
+++ b/app/templates/mantenimiento/inventario.html
@@ -2,6 +2,13 @@
 {% block title %}Inventario de Equipos{% endblock %}
 
 {% block content %}
+<!-- Breadcrumb -->
+<nav aria-label="breadcrumb" class="mb-3">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{{ url_for('main.dashboard') }}">Inicio</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Mantenimientos </li>
+    </ol>
+</nav>
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h2 class="text-secondary"><i class="fa-solid fa-screwdriver-wrench"></i> Inventario de Activos</h2>
     <div>
